tests/snapshots/snapshot_tests__annotations_table_ast.snap
---
source: tests/snapshot_tests.rs
expression: all_asts
---
[
    AstRoot {
        path: "tests/schemas/annotations_table.poly",
        file_imports: [],
        definitions: [
            Table(
                Table {
                    metadata: [
                        Annotation(
                            Annotation {
                                name: Some(
                                    "load",
                                ),
                                args: [
                                    Named(
                                        AnnotationParam {
                                            key: "type",
                                            value: String(
                                                "DB",
                                            ),
                                        },
                                    ),
                                    Named(
                                        AnnotationParam {
                                            key: "path",
                                            value: String(
                                                "Users",
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                        Annotation(
                            Annotation {
                                name: Some(
                                    "taggable",
                                ),
                                args: [],
                            },
                        ),
                    ],
                    name: Some(
                        "AnnotatedUser",
                    ),
                    members: [
                        Field(
                            Regular(
                                RegularField {
                                    metadata: [],
                                    name: Some(
                                        "id",
                                    ),
                                    field_type: TypeWithCardinality {
                                        base_type: Basic(
                                            U32,
                                        ),
                                        cardinality: None,
                                    },
                                    constraints: [
                                        PrimaryKey,
                                    ],
                                    field_number: None,
                                },
                            ),
                        ),
                        Field(
                            Regular(
                                RegularField {
                                    metadata: [],
                                    name: Some(
                                        "name",
                                    ),
                                    field_type: TypeWithCardinality {
                                        base_type: Basic(
                                            String,
                                        ),
                                        cardinality: None,
                                    },
                                    constraints: [],
                                    field_number: None,
                                },
                            ),
                        ),
                    ],
                },
            ),
        ],
    },
]
