tests/snapshots/snapshot_tests__annotations_table_ir.snap
---
source: tests/snapshot_tests.rs
expression: ir_context
---
SchemaContext {
    files: [
        FileDef {
            path: "annotations_table.poly",
            namespaces: [
                NamespaceDef {
                    name: "",
                    datasource: None,
                    items: [
                        Struct(
                            StructDef {
                                name: "AnnotatedUser",
                                fqn: "AnnotatedUser",
                                is_embed: false,
                                datasource: None,
                                cache_strategy: None,
                                load: None,
                                is_readonly: false,
                                soft_delete_field: None,
                                pack_separator: None,
                                header: [
                                    Annotation(
                                        AnnotationDef {
                                            name: "load",
                                            positional_args: [],
                                            params: [
                                                AnnotationParam {
                                                    key: "type",
                                                    value: "DB",
                                                },
                                                AnnotationParam {
                                                    key: "path",
                                                    value: "Users",
                                                },
                                            ],
                                        },
                                    ),
                                    Annotation(
                                        AnnotationDef {
                                            name: "taggable",
                                            positional_args: [],
                                            params: [],
                                        },
                                    ),
                                ],
                                items: [
                                    Field(
                                        FieldDef {
                                            name: "id",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [
                                                "Key",
                                            ],
                                            is_primary_key: true,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "name",
                                            field_type: TypeRef {
                                                original: "string",
                                                fqn: "string",
                                                namespace_fqn: "",
                                                type_name: "string",
                                                parent_type_path: "",
                                                lang_type: "string",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                ],
                                indexes: [
                                    IndexDef {
                                        name: "ById",
                                        schema_name: None,
                                        fields: [
                                            IndexFieldDef {
                                                name: "id",
                                                field_type: TypeRef {
                                                    original: "u32",
                                                    fqn: "u32",
                                                    namespace_fqn: "",
                                                    type_name: "u32",
                                                    parent_type_path: "",
                                                    lang_type: "u32",
                                                    is_primitive: true,
                                                    is_struct: false,
                                                    is_enum: false,
                                                    is_option: false,
                                                    is_list: false,
                                                    inner_type: None,
                                                },
                                            },
                                        ],
                                        is_unique: true,
                                        source: "constraint",
                                    },
                                ],
                                refs: [],
                                relations: [],
                            },
                        ),
                    ],
                },
            ],
            renames: [],
        },
    ],
}
